--- a/AtendimentoWeb/src/main/webapp/pages/cadastro/ProdutoTipoCadastro.xhtml
+++ b/AtendimentoWeb/src/main/webapp/pages/cadastro/ProdutoTipoCadastro.xhtml
@@ -6,14 +6,21 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:p="http://primefaces.org/ui" >
 
+	<h:head>
+		<link type="text/css" rel="stylesheet" href="../../style/principal.css" />
+	</h:head>
+	
 	<body>
-		<h:form>
-			<h:outputText value="Nome :" />
-			<br/>
-			<p:inputText id="nome" value="#{produtoTipoCadastroBean.produtoTipo.nome}" />
-			<br/>
-			<p:commandButton id="commit" actionListener="#{produtoTipoCadastroBean.salvar}" ajax="false" value="Cadastrar Tipo Produto"/>
-		</h:form>
+		<ui:include src="../../menu.xhtml" />
+		<div id="conteudo">
+			<h:form>
+				<h:outputText value="Nome :" />
+				<br/>
+				<p:inputText id="nome" value="#{produtoTipoCadastroBean.produtoTipo.nome}" />
+				<br/>
+				<p:commandButton styleClass="button" id="commit" actionListener="#{produtoTipoCadastroBean.salvar}" ajax="false" value="Cadastrar Tipo Produto"/>
+			</h:form>
+		</div>
 	</body>
 	
 </html>
