--- a/AtendimentoWeb/src/main/webapp/pages/cadastro/ProdutoTipoCadastro.xhtml
+++ b/AtendimentoWeb/src/main/webapp/pages/cadastro/ProdutoTipoCadastro.xhtml
@@ -14,6 +14,8 @@
 		<ui:include src="../../menu.xhtml" />
 		<div id="conteudo">
 			<h:form>
+				<p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+				<br/>
 				<h:outputText value="Nome :" />
 				<br/>
 				<p:inputText id="nome" value="#{produtoTipoCadastroBean.produtoTipo.nome}" />
