--- a/AtendimentoWeb/src/main/webapp/menu.xhtml
+++ b/AtendimentoWeb/src/main/webapp/menu.xhtml
@@ -14,19 +14,11 @@
 		            <p:separator />
 		            <p:menuitem value="Produto" url="#" icon="ui-icon-tag" />
 		            <p:separator />
-		            <p:menuitem value="Tipo de Produto" action="ProdutoTipoCadastro.xhtml" icon="ui-icon-tag" />
+		            <p:menuitem value="Tipo de Produto" action="/pages/cadastro/ProdutoTipoCadastro.xhtml" icon="ui-icon-tag" />
 		            <p:separator />
 		            <p:menuitem value="Pedido" url="#" icon="ui-icon-cart" />
 		        </p:submenu>
 		        
-		        <p:submenu label="Listagens" icon="ui-icon-note">
-		            <p:menuitem value="Usuário" action="pages/cadastro/ProdutoTipoCadastro.xhtml" icon="ui-icon-person" />
-		            <p:separator />
-		            <p:menuitem value="Produto" url="#" icon="ui-icon-tag" />
-		            <p:separator />
-		            <p:menuitem value="Tipo de Produto" url="#" icon="ui-icon-tag" />
-		        </p:submenu>
-		 
 		        <p:submenu label="Pedidos" icon="ui-icon-cart">
 		            <p:menuitem value="Comida" url="#" />
 		            <p:separator />
