--- a/AtendimentoWeb/src/main/webapp/pages/cadastro/ProdutoTipoCadastro.xhtml
+++ b/AtendimentoWeb/src/main/webapp/pages/cadastro/ProdutoTipoCadastro.xhtml
@@ -7,9 +7,9 @@
 	xmlns:p="http://primefaces.org/ui" >
 
 	<h:head>
-		<link type="text/css" rel="stylesheet" href="../../style/principal.css" />
+		<link type="text/css" rel="stylesheet" href="/AtendimentoWeb/faces/style/principal.css" />
 	</h:head>
-	
+
 	<body>
 		<ui:include src="../../menu.xhtml" />
 		<div id="conteudo">
