--- a/AtendimentoWeb/src/main/webapp/menu.xhtml
+++ b/AtendimentoWeb/src/main/webapp/menu.xhtml
@@ -12,7 +12,7 @@
 		        <p:submenu label="Cadastro" icon="ui-icon-plus">
 		            <p:menuitem value="Usuário" action="#" icon="ui-icon-person" />
 		            <p:separator />
-		            <p:menuitem value="Produto" url="#" icon="ui-icon-tag" />
+		            <p:menuitem value="Produto" action="/pages/cadastro/produtoCadastro.xhtml" icon="ui-icon-tag" />
 		            <p:separator />
 		            <p:menuitem value="Tipo de Produto" action="/pages/cadastro/produtoTipoCadastro.xhtml" icon="ui-icon-tag" />
 		            <p:separator />
