--- a/AtendimentoWeb/src/main/webapp/pages/cadastro/produtoTipoCadastro.xhtml
+++ b/AtendimentoWeb/src/main/webapp/pages/cadastro/produtoTipoCadastro.xhtml
@@ -33,7 +33,7 @@
 						    </p:column>
 						    
 						    <p:column headerText="Opções">
-						        <p:commandLink action="#{produtoTipoCadastroBean.editar(i)}" update="nome" value="Editar" />
+						        <p:commandLink action="#{produtoTipoCadastroBean.editar(i)}" update="nome" value="Editar" style="margin-right: 10px;"/>
 						        <p:commandLink action="#{produtoTipoCadastroBean.excluir(i)}" update="tabelaTipos" value="Excluir" />
 						    </p:column>
 						</p:dataTable>
