--- a/AtendimentoWeb/src/main/webapp/menu.xhtml
+++ b/AtendimentoWeb/src/main/webapp/menu.xhtml
@@ -20,7 +20,7 @@
 		        </p:submenu>
 		        
 		        <p:submenu label="Pedidos" icon="ui-icon-cart">
-		            <p:menuitem value="Comida" url="#" />
+		            <p:menuitem value="Comida" action="/pages/listagem/comidaListagem.xhtml" />
 		            <p:separator />
 		            <p:menuitem value="Bebida" url="#" />
 		        </p:submenu>
