lista de pedidos

--- a/AtendimentoWeb/src/main/webapp/pages/listagem/comidaListagem.xhtml
+++ b/AtendimentoWeb/src/main/webapp/pages/listagem/comidaListagem.xhtml
@@ -12,20 +12,26 @@
 
 	<body>
 		<ui:include src="../../menu.xhtml" />
-		<div id="conteudo" style="width:100%;height:100%">
-			<h:form prependId="false">
-				<p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-				<div class="ui-grid ui-grid-fixed">
-				    <div class="ui-grid-row">
-						<c:forEach var="comida" items="#{comidaListagemBean.produtos}">
-							<div style="width: 300px !important;">1</div>
-							<!-- <p:fieldset legend="#{comida.nome}"  style="width:300px; margin-bottom: 10px;">
-							</p:fieldset> -->
-						</c:forEach>
-					</div>
-				</div>
-    		</h:form>
-		</div>
+		<h:form prependId="false">
+			<p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+			<div class="divPai">
+				<c:forEach var="comida" items="#{comidaListagemBean.produtos}">
+					<p:fieldset legend="#{comida.nome}" styleClass="divFilha">
+						<p:dataTable var="item" value="#{comida.itensPedidos}" emptyMessage="Sem pedidos">
+						    <p:column headerText="Cli.">
+						        <h:outputText value="#{item.pedido.cliente}" />
+						    </p:column>
+						    <p:column headerText="Local">
+						        <h:outputText value="#{item.quantidadeMesa}" />
+						    </p:column>
+						    <p:column headerText="Via.">
+						        <h:outputText value="#{item.quantidadeViagem}" />
+						    </p:column>
+						</p:dataTable>
+					</p:fieldset>
+				</c:forEach>
+			</div>
+   		</h:form>
 	</body>
 	
 </html>
