--- a/AtendimentoWeb/src/main/webapp/menu.xhtml
+++ b/AtendimentoWeb/src/main/webapp/menu.xhtml
@@ -24,12 +24,8 @@
 		            <p:separator />
 		            <p:menuitem value="Bebida" url="#" />
 		        </p:submenu>
-		 
-		        <p:submenu label="Chat" icon="ui-icon-comment" >
-		            <p:menuitem value="Todos" url="#" icon="ui-icon-signal-diag" />
-		            <p:separator />
-		            <p:menuitem value="Usuário" url="#" icon="ui-icon-person" />
-		        </p:submenu>
+		       
+		        <p:menuitem value="Chat" url="/pages/chat/chat.xhtml" icon="ui-icon-signal-diag" />  
 		    </p:menubar>
 		</h:form>
 	</ui:composition>
