--- a/AtendimentoWeb/src/main/webapp/menu.xhtml
+++ b/AtendimentoWeb/src/main/webapp/menu.xhtml
@@ -10,7 +10,7 @@
 		<h:form id="menu">
 			<p:menubar>
 		        <p:submenu label="Cadastro" icon="ui-icon-plus">
-		            <p:menuitem value="Usuário" action="#" icon="ui-icon-person" />
+		            <p:menuitem value="Usuário" action="/pages/cadastro/usuarioCadastro.xhtml" icon="ui-icon-person" />
 		            <p:separator />
 		            <p:menuitem value="Produto" action="/pages/cadastro/produtoCadastro.xhtml" icon="ui-icon-tag" />
 		            <p:separator />
