--- a/AtendimentoWeb/src/main/webapp/menu.xhtml
+++ b/AtendimentoWeb/src/main/webapp/menu.xhtml
@@ -22,7 +22,7 @@
 		        <p:submenu label="Pedidos" icon="ui-icon-cart">
 		            <p:menuitem value="Comida" action="/pages/listagem/comidaListagem.xhtml" />
 		            <p:separator />
-		            <p:menuitem value="Bebida" url="#" />
+		            <p:menuitem value="Bebida" action="/pages/listagem/bebidaListagem.xhtml" />
 		        </p:submenu>
 		       
 		        <p:menuitem value="Chat" url="/pages/chat/chat.xhtml" icon="ui-icon-signal-diag" />  
