--- a/AtendimentoWeb/src/main/webapp/menu.xhtml
+++ b/AtendimentoWeb/src/main/webapp/menu.xhtml
@@ -24,6 +24,12 @@
 		            <p:separator />
 		            <p:menuitem value="Bebida" action="/pages/listagem/bebidaListagem.xhtml" />
 		        </p:submenu>
+		        
+		        <p:submenu label="Histórico" icon="ui-icon-cart">
+		            <p:menuitem value="Comida" action="/pages/historico/comidaHistorico.xhtml" />
+		            <p:separator />
+		            <p:menuitem value="Bebida" action="/pages/historico/bebidaHistorico.xhtml" />
+		        </p:submenu>
 		       
 		        <p:menuitem value="Chat" url="/pages/chat/chat.xhtml" icon="ui-icon-signal-diag" />  
 		    </p:menubar>
