--- a/AtendimentoWeb/src/main/webapp/pages/listagem/comidaListagem.xhtml
+++ b/AtendimentoWeb/src/main/webapp/pages/listagem/comidaListagem.xhtml
@@ -13,77 +13,90 @@
 	<body>
 		<ui:include src="../../menu.xhtml" />
 		<h:form prependId="false">
+			<p:commandButton styleClass="button" id="atualizar" value="Atualizar" style="display: none;"> 
+				<f:ajax event="click" listener="#{comidaListagemBean.atualizarTela()}" render="comidas" />
+			</p:commandButton>
 			<p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-			<div class="divPai">
-				<c:forEach var="comida" items="#{comidaListagemBean.produtos}">
-					<div class="divFilha">
-						<p:fieldset legend="#{comida.nome}" >
-							<p:outputLabel value="Local: #{comida.pendentesLocal}" style="margin-right: 10px;" />
-							<p:outputLabel value="Viagem: #{comida.pendentesViagem}"  style="margin-right: 10px;"  />
-							<p:outputLabel value="Total: #{comida.pendentesTotal}"  style="margin-right: 10px;"  />
-							<p:dataTable var="item" value="#{comida.itensPedidos}" emptyMessage="Sem pedidos">
-							    <p:column headerText="Cli.">
-								    <div style="background-color: #{item.situacaoPedido.corFundo}" onclick="alert('#{item.observacao}')">
-								         <h:outputText value="(!) " rendered="#{not empty item.observacao}" /><h:outputText value="#{item.pedido.cliente}" title="#{item.pedido.cliente}" />
-							        </div>
-							    </p:column>
-							    <p:column width="25px;" headerText="Loc.">
-							        <h:outputText value="#{item.quantidadeMesa}" />
-							    </p:column>
-							    <p:column width="25px;" headerText="Via.">
-							        <h:outputText value="#{item.quantidadeViagem}" />
-							    </p:column>
-							    <p:column headerText="Status">
-							        <p:selectOneMenu id="produto" value="#{item.situacaoPedido}">
-							            <f:selectItems value="#{comidaListagemBean.situacoes}" />
-							            <f:ajax event="change" execute="@this" render="@form" listener="#{comidaListagemBean.atualizarItem(comida.id, item.id)}" />
-							        </p:selectOneMenu>
-							    </p:column>
-							</p:dataTable>
-						</p:fieldset>
-					</div>
-				</c:forEach>
-			</div>
-			<p:dialog header="Alterar Quantidade" widgetVar="modalQuant" modal="true" resizable="false" closable="false" minWidth="500" width="500" height="250">
-			    <h:panelGroup id="camposEdicao">
-				    <h:panelGrid columns="2" style="margin-bottom:10px">
-				    	<p:outputLabel for="cliente" value="Cliente: " />
-						<p:inputText id="cliente" value="#{comidaListagemBean.clienteEdicao}" />
-				    </h:panelGrid>
-	        		<h:panelGrid columns="2" style="margin-bottom:10px">
-				        <p:outputLabel for="quantidadeMesa" value="Quant. Local: " />
-		        		<p:spinner id="quantidadeMesa" value="#{comidaListagemBean.quantidadeLocalEdicao}" min="0" max="100" />
-	    			</h:panelGrid>
-	        		<h:panelGrid columns="2" style="margin-bottom:10px">
-				        <p:outputLabel for="quantidadeViagem" value="Quant. Viagem: " />
-		        		<p:spinner id="quantidadeViagem" value="#{comidaListagemBean.quantidadeViagemEdicao}" min="0" max="100" />
-	    			</h:panelGrid>
-	    			<h:panelGrid columns="2" style="margin-bottom:10px">
-				    	<p:outputLabel for="observacao" value="Observação: " />
-						<p:inputText id="observacao" value="#{comidaListagemBean.observacaoEdicao}" />
-				    </h:panelGrid>
-	    			<p:commandButton styleClass="button" id="salvarAlteracao" value="Salvar" style="margin-right: 10px;"> 
-						<f:ajax event="click" execute="camposEdicao" listener="#{comidaListagemBean.confirmarEdicao()}" render="@form" />
-					</p:commandButton>
-					<p:commandButton styleClass="button" id="cancelarAlteracao" value="Cancelar"> 
-						<f:ajax event="click" listener="#{comidaListagemBean.cancelarEdicao()}" render="@form"/>
-					</p:commandButton>
+			<h:panelGroup id="comidas">
+				<div class="divPai">
+					<c:forEach var="comida" items="#{comidaListagemBean.produtos}">
+						<div class="divFilha">
+							<p:fieldset legend="#{comida.nome}" >
+								<p:outputLabel value="Local: #{comida.pendentesLocal}" style="margin-right: 10px;" />
+								<p:outputLabel value="Viagem: #{comida.pendentesViagem}"  style="margin-right: 10px;"  />
+								<p:outputLabel value="Total: #{comida.pendentesTotal}"  style="margin-right: 10px;"  />
+								<p:dataTable var="item" value="#{comida.itensPedidos}" emptyMessage="Sem pedidos">
+								    <p:column headerText="Cli.">
+									    <div style="background-color: #{item.situacaoPedido.corFundo}" onclick="alert('#{item.observacao}')">
+									         <h:outputText value="(!) " rendered="#{not empty item.observacao}" /><h:outputText value="#{item.pedido.cliente}" title="#{item.pedido.cliente}" />
+								        </div>
+								    </p:column>
+								    <p:column width="25px;" headerText="Loc.">
+								        <h:outputText value="#{item.quantidadeMesa}" />
+								    </p:column>
+								    <p:column width="25px;" headerText="Via.">
+								        <h:outputText value="#{item.quantidadeViagem}" />
+								    </p:column>
+								    <p:column headerText="Status">
+								        <p:selectOneMenu onchange="pararAtualizacao();" id="produto" value="#{item.situacaoPedido}">
+								            <f:selectItems value="#{comidaListagemBean.situacoes}" />
+								            <f:ajax event="change" execute="@this" render="@form" listener="#{comidaListagemBean.atualizarItem(comida.id, item.id)}" />
+								        </p:selectOneMenu>
+								    </p:column>
+								</p:dataTable>
+							</p:fieldset>
+						</div>
+					</c:forEach>
+				</div>
+				<p:dialog header="Alterar Quantidade" widgetVar="modalQuant" modal="true" resizable="false" closable="false" minWidth="500" width="500" height="250">
+				    <h:panelGroup id="camposEdicao">
+					    <h:panelGrid columns="2" style="margin-bottom:10px">
+					    	<p:outputLabel for="cliente" value="Cliente: " />
+							<p:inputText id="cliente" value="#{comidaListagemBean.clienteEdicao}" />
+					    </h:panelGrid>
+		        		<h:panelGrid columns="2" style="margin-bottom:10px">
+					        <p:outputLabel for="quantidadeMesa" value="Quant. Local: " />
+			        		<p:spinner id="quantidadeMesa" value="#{comidaListagemBean.quantidadeLocalEdicao}" min="0" max="100" />
+		    			</h:panelGrid>
+		        		<h:panelGrid columns="2" style="margin-bottom:10px">
+					        <p:outputLabel for="quantidadeViagem" value="Quant. Viagem: " />
+			        		<p:spinner id="quantidadeViagem" value="#{comidaListagemBean.quantidadeViagemEdicao}" min="0" max="100" />
+		    			</h:panelGrid>
+		    			<h:panelGrid columns="2" style="margin-bottom:10px">
+					    	<p:outputLabel for="observacao" value="Observação: " />
+							<p:inputText id="observacao" value="#{comidaListagemBean.observacaoEdicao}" />
+					    </h:panelGrid>
+		    			<p:commandButton styleClass="button" id="salvarAlteracao" value="Salvar" style="margin-right: 10px;"> 
+							<f:ajax event="click" execute="camposEdicao" listener="#{comidaListagemBean.confirmarEdicao()}" render="comidas" />
+						</p:commandButton>
+						<p:commandButton styleClass="button" id="cancelarAlteracao" value="Cancelar"> 
+							<f:ajax event="click" listener="#{comidaListagemBean.cancelarEdicao()}" render="comidas"/>
+						</p:commandButton>
+					</h:panelGroup>
+				</p:dialog> 
+				<h:panelGroup rendered="#{comidaListagemBean.editar}">
+						<script type="text/javascript">
+						PF('modalQuant').show();
+						</script>
 				</h:panelGroup>
-			</p:dialog> 
-			<h:panelGroup rendered="#{comidaListagemBean.editar}">
-					<script type="text/javascript">
-					PF('modalQuant').show();
-					</script>
 			</h:panelGroup>
-			<!-- <script type="text/javascript">
+			<script type="text/javascript">
 				var atualizacaoInterval;
 				function iniciarAtualizacao() {
-					verificacaoInterval = setInterval(
-							function() {
-								document.getElementById(id)
-								})
+					atualizacaoInterval = setInterval(
+						function() {
+							document.getElementById('atualizar').click();
+							}, 10000);
 				}
-			</script> -->
+				function pararAtualizacao() {
+					clearInterval(atualizacaoInterval);
+				}
+				$(document).ready(
+					function() {
+						iniciarAtualizacao();
+					}
+				);
+			</script>
    		</h:form>
 	</body>
 </html>
