--- a/AtendimentoWeb/src/main/webapp/menu.xhtml
+++ b/AtendimentoWeb/src/main/webapp/menu.xhtml
@@ -31,7 +31,7 @@
 		            <p:menuitem value="Bebida" action="/pages/historico/bebidaHistorico.xhtml" />
 		        </p:submenu>
 		       
-		        <p:menuitem value="Chat" url="/pages/chat/chat.xhtml" icon="ui-icon-signal-diag" />  
+		        <p:menuitem value="Chat" action="/pages/chat/chat.xhtml" icon="ui-icon-signal-diag" />  
 		    </p:menubar>
 		</h:form>
 	</ui:composition>
