--- a/AtendimentoWeb/src/main/webapp/pages/listagem/bebidaListagem.xhtml
+++ b/AtendimentoWeb/src/main/webapp/pages/listagem/bebidaListagem.xhtml
@@ -90,6 +90,7 @@
 			<script type="text/javascript">
 				var atualizacaoInterval;
 				function iniciarAtualizacao() {
+					clearInterval(atualizacaoInterval);
 					atualizacaoInterval = setInterval(
 						function() {
 							document.getElementById('atualizar').click();
