--- a/AtendimentoWeb/src/main/webapp/pages/listagem/comidaListagem.xhtml
+++ b/AtendimentoWeb/src/main/webapp/pages/listagem/comidaListagem.xhtml
@@ -83,6 +83,7 @@
 			<script type="text/javascript">
 				var atualizacaoInterval;
 				function iniciarAtualizacao() {
+					clearInterval(atualizacaoInterval);
 					atualizacaoInterval = setInterval(
 						function() {
 							document.getElementById('atualizar').click();
