--- a/AtendimentoWeb/src/main/webapp/pages/listagem/comidaListagem.xhtml
+++ b/AtendimentoWeb/src/main/webapp/pages/listagem/comidaListagem.xhtml
@@ -38,10 +38,10 @@
 								        <h:outputText value="#{item.quantidadeViagem}" />
 								    </p:column>
 								    <p:column headerText="Status">
-								        <p:selectOneMenu onchange="pararAtualizacao();" id="produto" value="#{item.situacaoPedido}">
+								        <p:selectOneListbox style="font-size:11px" onchange="pararAtualizacao();" id="produto" value="#{item.situacaoPedido}">
 								            <f:selectItems value="#{comidaListagemBean.situacoes}" />
 								            <f:ajax event="change" execute="@this" render="@form" listener="#{comidaListagemBean.atualizarItem(comida.id, item.id)}" />
-								        </p:selectOneMenu>
+								        </p:selectOneListbox>
 								    </p:column>
 								</p:dataTable>
 							</p:fieldset>
